<resources>
    <string name="app_name">Abastece Aqui</string>
    <string name="text_title">ABASTECE AQUI</string>
    <string name="text_title2">A UM PASSO DE VOCÊ</string>
    <string name="text_versao1">v0.1 - Teste</string>
    <string name="text_equipe">Desenvolvido pela equipe Abastece aqui</string>
    <string name="img_logo">img_logo</string>
    <string name="text_login">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="text_button_entrar">ENTRAR</string>
    <string name="text_cadastro">CADASTRAR-SE</string>
    <string name="text_cadastro2">CADASTRO</string>
    <string name="text_dados_cad">Informe seus dados para o cadastro</string>
    <string name="text_button_concluir">CONCLUIR</string>
    <string name="nome_hint">Nome de usuário</string>
    <string name="senha_cad_hint">Informe sua senha</string>
    <string name="senha2_cad_hint">Confirme sua senha</string>
    <string name="address_hint">Endereço</string>
    <string name="text_busca_cep">Buscar CEP</string>
    <string name="text_credenciais">Salvar login</string>
    <string name="text_ver_senha">senha</string>
    <string name="text_sair">SAIR</string>
    <string name="busca_cep_hint">Informe o numero do cep</string>
    <string name="text_rua">Rua</string>
    <string name="text_bairro">Bairro</string>
    <string name="text_cidade">Cidade</string>
    <string name="text_estado">Estado</string>
    <string name="insere_endereco">Inserir endereço</string>
    <string name="perto_de_mim">Perto de Mim</string>
    <string name="combust_veis">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="postos">Postos</string>
    <string name="sair">sair</string>
    <string name="adicionar_posto_de_gasolina">Adicionar Posto de Gasolina</string>
    <string name="digite_o_nome_da_cidade">Digite o nome da cidade</string>
    <string name="dados_posto">Informe os dados do posto</string>
    <string name="nome">Nome</string>
    <string name="valor_gasolina">Preço Gasolina</string>
    <string name="valor_alcool">Preço Alcool</string>
    <string name="pre_o_diesel">Preço Diesel</string>
    <string name="todo">TODO\n</string>
    <string name="buscar_cidade">Buscar cidade</string>
    <string name="go">GO</string>
    <string name="gasolina_comum">Gasolina Comum</string>
    <string name="gasolina_aditivada">Gasolina Aditivada</string>
    <string name="gas_natural">Gas Natural</string>
    <string name="etanol">Etanol</string>
    <string name="valor">valor</string>
    <string name="diesel_comum">Diesel Comum</string>
    <string name="diesel_s10">Diesel S10</string>

    <string name="text_1">Alcool ou Gasolina?</string>
    <string name="text_2">Saiba a melhor opção para abastecer seu carro!</string>
    <string name="text_alcool">Preço Álcool. ex: 1.90</string>
    <string name="text_gasolina">Preço Gasolina. ex: 2.90</string>
    <string name="text_calcular">CALCULAR</string>
    <string name="text_resultado">RESULTADO</string>
    <string name="voltar">VOLTAR</string>

</resources>