<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity_custo">

    <ImageView
        android:id="@+id/id_imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/id_text_1"
        android:layout_below="@id/id_imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/id_text_2"
        android:layout_below="@id/id_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/id_alcool"
        android:layout_below="@id/id_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/text_alcool"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/id_gasolina"
        android:layout_below="@id/id_alcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/text_gasolina"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/id_bt_calcular"
        android:layout_below="@id/id_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_calcular"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/id_resultado"
        android:layout_below="@id/id_bt_calcular"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/text_resultado"
        android:textSize="30sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"/>

</RelativeLayout>