<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainCadastro">

        <TextView
            android:id="@+id/id_text_util_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="45sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/id_text_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cadastro2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="110dp"
            />

        <TextView
            android:id="@+id/id_text_cad_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dados_posto"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/id_text_cad"
            />

        <EditText
            android:id="@+id/edit_nome_posto"
            style="@style/Edit_Text_cad"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_text_cad_2"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_address_posto"
            style="@style/Edit_Text_cad"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nome_posto"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_local"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_gasolina"
            style="@style/Edit_Text_cad"
            android:hint="@string/valor_gasolina"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_address_posto"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_local"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_alcool"
            style="@style/Edit_Text_cad"
            android:hint="@string/valor_alcool"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_gasolina"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_local"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_diesel"
            style="@style/Edit_Text_cad"
            android:hint="@string/pre_o_diesel"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_alcool"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_local"
            android:importantForAutofill="no" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_posto"
            style="@style/Button_concluir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/edit_diesel"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>