<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainLogin">

        <TextView
            android:id="@+id/id_text_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="45sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:id="@+id/id_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp"
            />
        <EditText
            android:id="@+id/edit_mail"
            style="@style/Edit_Text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_text_login"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_mail"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_pass"
            style="@style/Edit_Text"
            android:hint="@string/senha_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_mail"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/id_ver_senha"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="@id/edit_pass"
            app:layout_constraintEnd_toEndOf="@id/edit_pass"
            app:layout_constraintTop_toTopOf="@id/edit_pass"
            android:layout_marginStart="280dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/text_ver_senha" />

        <CheckBox
            android:id="@+id/id_checkbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_pass"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/text_credenciais"
            android:backgroundTint="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_login"
            style="@style/Button_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_checkbox"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_button_cadastro"
            style="@style/Button_cadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_button_login"

            />

        <ProgressBar
            android:id="@+id/id_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/id_button_cadastro"
            android:indeterminateTint="@color/white"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginTop="15dp"/>


        <TextView
            android:id="@+id/id_text_versao_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_versao1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/id_bar"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/id_equip_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_equipe"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/id_text_versao_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>