<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Map">

    <View
        android:id="@+id/id_view_map"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="@id/id_view_map"
        app:layout_constraintStart_toStartOf="@id/id_view_map"
        app:layout_constraintTop_toTopOf="@id/id_view_map" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/id_focus_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_my_location"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edit_buscaCidade"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:autofillHints=""
        android:hint="@string/buscar_cidade"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintStart_toStartOf="@id/mapView"
        app:layout_constraintTop_toTopOf="@id/mapView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toEndOf="@+id/edit_buscaCidade"
        app:layout_constraintTop_toTopOf="@+id/mapView" />


    <TextView
        android:id="@+id/id_nome_posto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_view_map" />

    <TextView
        android:id="@+id/id_gas_comum"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/gasolina_comum"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_nome_posto" />

    <TextView
        android:id="@+id/id_valor_comum"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_gas_comum" />


    <TextView
        android:id="@+id/id_gas_adt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/gasolina_aditivada"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/id_nome_posto" />

    <TextView
        android:id="@+id/id_valor_adt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/id_gas_adt"/>

    <TextView
        android:id="@+id/id_etanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/etanol"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/id_nome_posto" />

    <TextView
        android:id="@+id/id_valor_etanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/id_etanol" />

    <TextView
        android:id="@+id/id_gasNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gas_natural"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/id_valor_etanol" />

    <TextView
        android:id="@+id/id_valor_gasNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/id_gasNatural" />


    <TextView
        android:id="@+id/id_diesel_comum"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/diesel_comum"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_valor_comum" />
    <TextView
        android:id="@+id/id_valor_diesel_comum"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_diesel_comum" />

    <TextView
        android:id="@+id/id_diesel_s10"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/diesel_s10"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/id_valor_adt" />

    <TextView
        android:id="@+id/id_valor_diesel_s10"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/id_diesel_s10"/>


    <Button
        android:id="@+id/button_go"
        style="@style/Widget.Material3.Button"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/Container_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/id_postos"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="-85dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_gas"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/id_custo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_custo"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />



    <View
        android:id="@+id/view2"
        style="@style/Container_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/id_sair"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="85dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_loggout"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageView
        android:id="@+id/id_perfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="-60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>